force-app/main/default/objects/RTV_BaoZun_Seeding__c/RTV_BaoZun_Seeding__c.object-meta.xml
<CustomObject>
    <label>RTV Baozun Seeding</label>
    <nameField>
        <label>RTV BaoZun Seeding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Baozun Seeding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>