force-app/main/default/objects/RTV_BaoZun_Seeding__c/fields/current_date__c.field-meta.xml
<CustomField>
    <fullName>current_date__c</fullName>
    <description>当前系统日期</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current date</label>
    <type>Date</type>
</CustomField>