force-app/main/default/objects/RTV_BaoZun_Seeding__c/fields/Seeding_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Seeding_Auth_Code__c</fullName>
    <label>Seeding Auth Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>