force-app/main/default/objects/RTV_BaoZun_Seeding__c/recordTypes/RTV_Baozun_Seeding_Inprocess.recordType-meta.xml
<RecordType>
    <fullName>RTV_Baozun_Seeding_Inprocess</fullName>
    <active>true</active>
    <label>RTV Baozun Seeding Inprocess</label>
</RecordType>