force-app/main/default/objects/RTV_BaoZun_Seeding__c/recordTypes/RTV_Baozun_Seeding_Pending.recordType-meta.xml
<RecordType>
    <fullName>RTV_Baozun_Seeding_Pending</fullName>
    <active>true</active>
    <label>RTV Baozun Seeding Pending</label>
</RecordType>