force-app/main/default/objects/RTV_BaoZun_Seeding__c/validationRules/SeedingNameCanNotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>SeedingNameCanNotChange</fullName>
    <active>true</active>
    <description>Inprocess和Completed时，不能修改Seeding  Name</description>
    <errorConditionFormula>AND(
OR(TEXT( Status__c) ==&apos;In Process&apos;,TEXT(Status__c) ==&apos;Completed&apos;), ISCHANGED(Name)
 )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Seeding name can not be changed!</errorMessage>
</ValidationRule>