force-app/main/default/objects/RTV_BaoZun_Seeding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Seeding_Auth_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>